# text-translation-service

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  Dockerfile  README.md  alembic.ini  compose.yaml  google_genai_client.py  main.py  openrouter_client.py  pyproject.toml  srt_parser.py  test_translation.py
.github/workflows/: docker-publish.yml
alembic/: env.py
alembic/versions/: 7bbe0b7dc3dc_add_index_on_status_column.py  f28765532785_initial_migration_create_transcription_.py
app/: __init__.py  main.py
app/api/: __init__.py
app/api/v1/: __init__.py  health.py  transcription.py  translation.py
app/core/: __init__.py  config.py  log_filter.py  logging.py  middleware.py  security.py
app/db/: __init__.py  base.py  crud.py  models.py
app/models/: __init__.py  srt.py
app/schemas/: __init__.py  transcription.py  translation.py
app/services/: assemblyai_client.py  polling_service.py  srt_parser.py  transcription_service.py  translation.py
app/storage/: __init__.py  s3.py
scripts/: format.sh  lint.sh  prestart.sh  test.sh
tests/: README.md  __init__.py  conftest.py
tests/api/v1/: README.md  test_health.py  test_transcription.py  test_transcription_direct.py  test_transcription_integration.py  test_translation.py
tests/core/: test_log_filter.py  test_security.py
tests/db/: test_crud_active_polling.py  test_crud_polling.py
tests/services/: test_assemblyai_client.py  test_polling_service.py  test_srt_parser.py  test_transcription_service.py  test_translation.py
tests/storage/: test_s3.py
