[project]
name = "text-translation-service"
version = "0.1.0"
description = "SRT translation service using Google GenAI (Gemini 2.5 Pro)"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.121.0",
    "uvicorn[standard]>=0.38.0",
    "httpx>=0.28.1",
    "pydantic>=2.12.4",
    "pydantic-settings>=2.7.1",
    "python-dotenv>=1.2.1",
    "pysubs2>=1.7.0",
    "google-genai>=1.49.0",
    "assemblyai>=0.30.0",
    "sqlalchemy>=2.0.0",
    "aiosqlite>=0.19.0",
    "alembic>=1.13.0",
    "python-multipart>=0.0.6",
    "aioboto3>=12.3.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.4.2",
    "pytest-asyncio>=1.2.0",
    "pytest-cov>=7.0.0",
    "black>=25.9.0",
    "ruff>=0.14.4",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"

[tool.black]
line-length = 100
target-version = ["py313"]

[tool.ruff]
line-length = 100
target-version = "py313"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]
ignore = []

[tool.ruff.lint.isort]
combine-as-imports = true
force-sort-within-sections = true
