[project]
name = "text-translation-service"
version = "0.1.0"
description = "SRT translation service using Google GenAI (Gemini 2.5 Pro)"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
	"fastapi>=0.135.1",
	"uvicorn[standard]>=0.41.0",
	"httpx>=0.28.1",
	"pydantic>=2.12.4",
	"pydantic-settings>=2.13.1",
	"python-dotenv>=1.2.2",
	"pysubs2>=1.8.0",
	"google-genai>=1.65.0",
	"assemblyai>=0.54.0",
	"sqlalchemy[asyncio]>=2.0.48",
	"aiosqlite>=0.21.0",
	"alembic>=1.18.4",
	"python-multipart>=0.0.22",
	"aioboto3>=15.5.0",
]

[project.optional-dependencies]
dev = [
	"pytest>=8.4.2",
	"pytest-asyncio>=1.2.0",
	"pytest-cov>=7.0.0",
	"pytest-env>=1.5.0",
	"black>=26.1.0",
	"ruff>=0.15.4",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
env = ["DATABASE_PATH=./data/test.db"]

[tool.black]
line-length = 100
target-version = ["py313"]

[tool.ruff]
line-length = 100
target-version = "py313"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]
ignore = []

[tool.ruff.lint.isort]
combine-as-imports = true
force-sort-within-sections = true
